Implement accept and reject chat request feature
Refactor some activity names for clarity. Add custom button styles. Add Friends class. Wire up Friends Fragment. Add requests Fragment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Profile"
-            android:parentActivityName=".Users" />
+            android:name=".ProfileActivity"
+            android:parentActivityName=".UsersActivity" />
         <activity
-            android:name=".Users"
-            android:parentActivityName=".Chat" />
+            android:name=".UsersActivity"
+            android:parentActivityName=".ChatActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,19 +27,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Settings"
-            android:parentActivityName=".Chat" />
+            android:name=".SettingsActivity"
+            android:parentActivityName=".ChatActivity" />
         <activity android:name=".SplashScreen" />
-        <activity android:name=".Chat" />
+        <activity android:name=".ChatActivity" />
         <activity
-            android:name=".Login"
+            android:name=".LoginActivity"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".Register"
+            android:name=".RegisterActivity"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".Status"
-            android:parentActivityName=".Settings" />
+            android:name=".StatusActivity"
+            android:parentActivityName=".SettingsActivity" />
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat"/>
 
