--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:parentActivityName=".UsersActivity" />
         <activity
             android:name=".UsersActivity"
-            android:parentActivityName=".ChatActivity" />
+            android:parentActivityName=".PostLoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +29,7 @@
         <activity android:name=".PostLoginActivity" />
         <activity
             android:name=".SettingsActivity"
-            android:parentActivityName=".ChatActivity" />
+            android:parentActivityName=".PostLoginActivity" />
         <activity android:name=".SplashScreen" />
         <activity android:name=".ChatActivity"
             android:parentActivityName=".PostLoginActivity"/>
